# claripy

./: .dockerignore  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .setup.cfg.un~  .travis.yml  Cargo.toml  Dockerfile  MANIFEST.in  README.md  VERSION  appveyor.yml  knots.py  pyproject.toml  reqs.txt  requirements.txt  setup.cfg  setup.py  test.py
native/: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.in  README.md  base.docker  build.sh  build_docker.sh  build_ffi.py  claricpp.docker  headers.hpp  test.py
native/api/: CMakeLists.txt  autogen.cpp  backtrace.cpp  backtrace.hpp  constants.hpp  err.hpp  exceptions.cpp  globals.cpp  globals.hpp  headers.hpp  log.cpp  manual.cpp  manual.hpp  py_obj.cpp  py_obj.hpp  signal_handler.cpp  signal_handler.hpp  simplify.cpp
native/api/binder/: clari.conf  docker_cmd.sh  gen-bindings.sh
native/binder/: docker_cmd.sh  gen-bindings.sh
native/cmake/: Backward.cmake  Boost.cmake  Doxygen.cmake  EnableSecurity.cmake  FindGMP.cmake  FindRequired.cmake  GMP.cmake  SimpleTest.cmake  StaticAnalsis.cmake  config_cmake.cmake  default.cmake  enable_security.cmake  fetch.cmake  find_required.cmake  find_required_program.cmake  gen_api_file.cmake  hash_dir.cmake  is_eldest.cmake  read_lines.cmake  set_prefer_cli.cmake  symlink_required.cmake  z3.cmake
native/cmake/z3/: z3_build.cmake  z3_download.cmake  z3_path.cmake  z3_system.cmake
native/python/: annotation.py  annotation_spav.py  backend.py  claricpp.py  create.py  expr.py  test.py  z3.py
native/python_api/: .gitignore  __init__.py  claricpp.py  create.py  z3.py
native/src/: .clang-tidy  CMakeLists.txt  annotation.hpp  api.cpp  api.h  api.hpp  api_private.hpp  api_public.h  ast.hpp  backend.hpp  big_int.cpp  big_int.hpp  bit_length.hpp  constants.hpp  create.hpp  csized.hpp  cuid.hpp  dummy.hpp  error.hpp  errors.hpp  expr.hpp  expression.hpp  factory.hpp  fp.hpp  fp_width.hpp  has_repr.hpp  hash.hpp  interface.hpp  macros.hpp  mode.h  mode.hpp  namespaces.hpp  op.hpp  py_obj.hpp  simplification.hpp  simplify.hpp  soc.hpp  unittest.hpp  util.h  util.hpp  (+1 more)
native/src/annotation/: base.cpp  base.hpp  factory.hpp  simplification_avoidance.cpp  simplification_avoidance.hpp  vec.hpp
native/src/annotations/: base.cpp  base.hpp  simplification_avoidance.cpp  simplification_avoidance.hpp
native/src/api/: .gitignore  CMakeLists.txt  annotation.cpp  annotation.h  api.cpp  api.h  autogen.cpp  backend.cpp  backend.h  backtrace.cpp  backtrace.hpp  big_int.cpp  big_int.h  c.h  c_headers.c  c_headers.cpp  callbacks.h  clari.conf  constants.h  constants.hpp  cpp.hpp  create.cpp  create.h  err.hpp  exceptions.cpp  exceptions.hpp  expr.cpp  expr.h  free.cpp  free.h  general.cpp  general.h  globals.cpp  globals.hpp  headers.hpp  log.cpp  log.hpp  manual.cpp  manual.hpp  py_obj.cpp  (+8 more)
native/src/ast/: ast_base.hpp  ast_cache_key.cpp  ast_cache_key.hpp  base.cpp  base.hpp  bits.cpp  bits.hpp  bool.cpp  bool.hpp  bv.cpp  bv.hpp  cache.hpp  cache_key.cpp  cache_key.hpp  cast.hpp  constants.hpp  factory.cpp  factory.hpp  forward_declarations.hpp  fp.cpp  fp.hpp  hash_cache.hpp  int.cpp  int.hpp  macros.hpp  repr_level.hpp  string.cpp  string.hpp  using_declarations.hpp  vs.cpp  vs.hpp
native/src/backend/: CMakeLists.txt  abstraction_variant.hpp  base.cpp  base.hpp  concrete.hpp  generic.hpp  z3.hpp
native/src/create/: CMakeLists.txt  abs.hpp  add.hpp  concat.hpp  constants.cpp  constants.hpp  eq.hpp  extract.hpp  fp.hpp  if.hpp  invert.hpp  literal.hpp  neg.hpp  reverse.hpp  string.hpp  sub.hpp  symbol.hpp  trivial.hpp
native/src/cuid/: cuid.hpp  has.hpp  is_t.hpp  static_cuid.hpp
native/src/dummy/: quick_backends.hpp
native/src/error/: ast.hpp  backend.hpp  expr.hpp  expression.hpp
native/src/errors/: ast.hpp  claricpp.cpp  claricpp.hpp  errors.cpp  errors.hpp  factory.hpp  python.hpp  unexpected.hpp
native/src/expr/: CMakeLists.txt  are_same_type.hpp  base.cpp  base.hpp  bits.hpp  copy.hpp  factory.hpp  instantiables.hpp  make_like.cpp  make_like.hpp  repr.cpp  repr.hpp  type_name.hpp  type_names.hpp
native/src/expression/: CMakeLists.txt  are_same.hpp  are_same_type.hpp  base.cpp  base.hpp  bits.cpp  bits.hpp  bool.hpp  cache_key.cpp  cache_key.hpp  cast.hpp  constants.hpp  copy.hpp  factory.hpp  forward_declarations.hpp  hash.hpp  instantiables.hpp  raw.hpp  repr.cpp  repr.hpp  repr_level.hpp  simplified_level.hpp  type_name.hpp
native/src/factory/: cuid.hpp  factory.hpp  factory_made.hpp  has_static_cuid.hpp  static_cuid.hpp
native/src/fp/: mode.hpp
native/src/hash/: constants.hpp  hash.hpp  hashed.hpp  serialize.hpp  singular.hpp  strict_type.hpp  type.hpp
native/src/interface/: base.cpp  base.hpp  op.cpp  op.hpp
native/src/mode/: big_int.h  big_int.hpp  compare.hpp  fp.h  fp.hpp  lr.hpp  repr.hpp  shift.hpp  sign.hpp  signed.hpp
native/src/op/: add.hpp  base.hpp  binary.hpp  classifications.cpp  compare.hpp  concat.hpp  constants.hpp  eq.hpp  extract.hpp  factory.hpp  flat.hpp  fp.hpp  if.hpp  int_binary.hpp  literal.hpp  macros.hpp  operations.hpp  ostream.hpp  string.hpp  symbol.hpp  ternary.hpp  trivial.hpp  uint_binary.hpp  unary.hpp
native/src/ops/: classifications.cpp  classifications.hpp  operations.cpp  operations.hpp  operations_enum.hpp
native/src/py_obj/: base.hpp  trivial.hpp  vs.hpp
native/src/simplification/: CMakeLists.txt  cache.hpp  constants.hpp  manager.hpp  op_map.hpp  simplifiers.cpp  simplifiers.hpp  simplify.cpp  simplify.hpp
native/src/simplifications/: constants.hpp  manager.cpp  manager.hpp  private.cpp  private.hpp  simplifiers.cpp  simplifiers.hpp  simplify.cpp  simplify.hpp
native/src/simplify/: CMakeLists.txt  constants.hpp  manager.cpp  manager.hpp  simplifiers.cpp  simplifiers.hpp  simplify.cpp  simplify.hpp
native/src/soc/: CMakeLists.txt  base.cpp  base.hpp  concrete.cpp  concrete.hpp  factory.hpp  macros.hpp  symbolic.cpp  symbolic.hpp
native/src/util/: affirm.hpp  (+81 more)
native/tests/: CMakeLists.txt
(+1123 files in other folders)
