[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "B",
    "BLE",
    "C4",
    "E",
    "EXE",
    "F",
    "FLY",
    "FURB",
    "G",
    "I",
    "INP",
    "ISC",
    "LOG",
    "PERF",
    "PIE",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "T10",
    "TCH",
    "TID",
    "W",
    "UP",
    "YTT",
]
ignore = [
    "E501",
    "E741",
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "B011",
    "BLE",
    "F841",
    "INP001",
]
"docs/conf.py" = [
    "INP001",
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
