[build-system]
requires = ["setuptools>=46.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claripy"
description = "An abstraction layer for constraint solvers"
license = { text = "BSD-2-Clause" }
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
urls = { Homepage = "https://github.com/angr/claripy" }
requires-python = ">=3.10"
dependencies = ["cachetools", "typing-extensions", "z3-solver==4.13.0.0"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
docs = ["furo", "myst-parser", "sphinx", "sphinx-autodoc-typehints"]

[dependency-groups]
dev = ["pytest", "pytest-xdist"]

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.package-data]
claripy = ["py.typed"]

[tool.setuptools.dynamic]
version = { attr = "claripy.__version__" }

[tool.black]
line-length = 120
target-version = ['py310']

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "B",
    "BLE",
    "C4",
    "E",
    "EXE",
    "F",
    "FLY",
    "FURB",
    "G",
    "I",
    "INP",
    "ISC",
    "LOG",
    "PERF",
    "PIE",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "T10",
    "TCH",
    "TID",
    "W",
    "UP",
    "YTT",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "BLE", "F841", "INP001"]
"docs/conf.py" = ["INP001"]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]
