[metadata]
name = claripy
version = attr: claripy.__version__
url = https://github.com/angr/clairpy
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
license = BSD 2 Clause
license_files = LICENSE
description = An abstraction layer for constraint solvers
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    z3-solver >= 4.8.5.0
    future
    cachetools
    decorator
    pysmt >= 0.9.1.dev119
python_requires = >= 3.6
packages = find:

[options.package_data]
claripy = py.typed
