[metadata]
name = claripy
version = attr: claripy.__version__
description = An abstraction layer for constraint solvers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/angr/clairpy
license = BSD-2-Clause
license_files = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    cachetools
    decorator
    pysmt>=0.9.5
    z3-solver==4.10.2.0
python_requires = >=3.8

[options.extras_require]
cvc4_solver =
    cvc4-solver

[options.package_data]
claripy = py.typed
